(lang dune 2.7)

(name sqlite3)

(generate_opam_files true)

(source
 (github mmottl/sqlite3-ocaml))

(license MIT)

(homepage "https://mmottl.github.io/sqlite3-ocaml")

(documentation "https://mmottl.github.io/sqlite3-ocaml/api")

(maintainers "Markus Mottl <markus.mottl@gmail.com>")

(authors "Markus Mottl <markus.mottl@gmail.com>"
  "Christian Szegedy <csdontspam@metamatix.com>")

(package
 (name sqlite3)
 (synopsis "SQLite3 bindings for OCaml")
 (description
   "sqlite3-ocaml is an OCaml library with bindings to the SQLite3 client API.\nSqlite3 is a self-contained, serverless, zero-configuration, transactional SQL\ndatabase engine with outstanding performance for many use cases.")
 (depends
  (ocaml
   (>= 4.12))
  dune-compiledb
  dune-configurator
  (ppx_inline_test :with-test))
 (tags
  (clib:sqlite3 clib:pthread)))

(package
 (name sqlite3-eio)
 (synopsis "Eio wrapper for SQLite3 bindings")
 (description
   "Provides Eio-friendly wrappers for the sqlite3-ocaml bindings.\nDatabase operations run in system threads so other Eio fibers can\nproceed concurrently. Handles are tied to Eio switches for automatic cleanup.")
 (depends
  (ocaml (>= 5.1))
  (sqlite3 (= :version))
  (eio (>= 1.2))
  (eio_main :with-test)))
