(rule
 (targets arod_assets.ml)
 (deps favicon.svg favicon.ico favicon-32x32.png favicon-16x16.png
       apple-touch-icon.png site.webmanifest)
 (action
  (run ocaml-crunch --mode plain
       --ext svg --ext ico --ext png --ext webmanifest
       -o arod_assets.ml .)))

(library
 (name arod_assets)
 (public_name arod.assets))
